--- a/css/style.css
+++ b/css/style.css
@@ -96,7 +96,106 @@ body {
   top: 0;
 }
 
-.blood {
+.primary-bg {
+  min-height: 850px;
+  background: #14131a url("../img/background.jpg") no-repeat center / 100%;
+}
+
+.blood-body {
+  min-height: 850px;
   background: url("../img/blood.png") no-repeat top right,
     #14131a url("../img/background.jpg") no-repeat center / 100%;
+}
+
+.content {
+  display: flex;
+}
+
+.col {
+  flex-basis: 50%;
+}
+
+.content-title {
+  font-weight: bold;
+  font-size: 36px;
+  line-height: 42px;
+  color: rgba(255, 255, 255, 0.8);
+  margin-bottom: 21px;
+}
+
+.content-text {
+  max-width: 423px;
+  font-size: 16px;
+  line-height: 140%;
+  color: rgba(255, 255, 255, 0.8);
+  margin-bottom: 30px;
+}
+
+.content-subtitle {
+  font-weight: bold;
+  font-size: 16px;
+  line-height: 140%;
+  color: rgba(255, 255, 255, 0.8);
+  margin-bottom: 15px;
+  margin-top: 0;
+}
+
+.content .list {
+  list-style: none;
+  padding: 0;
+  margin: 0 0 20px 0;
+}
+
+.list-item {
+  font-size: 16px;
+  line-height: 140%;
+  color: rgba(255, 255, 255, 0.8);
+}
+
+.actors {
+  -webkit-column-count: 2;
+  -moz-column-count: 2;
+  column-count: 2;
+  -webkit-column-gap: 63px;
+  -moz-column-gap: 63px;
+  column-gap: 63px;
+  max-width: 330px;
+  margin-bottom: 33px;
+}
+
+.content .trailer {
+  width: 356px;
+  height: 205px;
+  background: url("../img/trailer-cover.jpg") no-repeat center / contain;
+  border-radius: 5px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.trailer-play {
+  width: 45px;
+  height: 45px;
+  border-radius: 50%;
+  border: none;
+  cursor: pointer;
+}
+
+.play-icon {
+  transform: translate(1px, 1px);
+}
+
+.poster-wrapper {
+  display: flex;
+  align-items: start;
+}
+
+.poster {
+  width: 362px;
+  border-radius: 5px;
+  margin-right: 30px;
+}
+
+.creators .content-subtitle {
+  margin-bottom: 5px;
 }
