--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,25 @@
 body {
+  background-color: #14131a;
   color: #fff;
   font-family: "Roboto", sans-serif;
 }
 
+img {
+  max-width: 100%;
+}
+
 .container {
   max-width: 1140px;
+  width: 90%;
   margin: auto;
+}
+
+.venom {
+  position: absolute;
+  right: 0;
+  top: 0;
+  max-width: 728px;
+  width: 50%;
 }
 
 .header {
@@ -44,14 +58,16 @@ body {
   font-size: 24px;
   line-height: 28px;
   color: rgba(255, 255, 255, 0.8);
-  margin-bottom: 38px;
+  margin-bottom: 2%;
 }
 
 .film-logo {
-  margin-bottom: 40px;
+  margin-bottom: 3%;
+  width: 70%;
 }
 
 .film-description {
+  margin: 0;
   max-width: 423px;
   font-size: 16px;
   line-height: 140%;
@@ -87,28 +103,21 @@ body {
 }
 
 .button-group {
-  margin-top: 70px;
-}
-
-.venom {
-  position: absolute;
-  right: 0;
-  top: 0;
+  margin-top: 5%;
 }
 
 .primary-bg {
-  min-height: 850px;
   background: #14131a url("../img/background.jpg") no-repeat center / 100%;
 }
 
 .blood-body {
-  min-height: 850px;
-  background: url("../img/blood.png") no-repeat top right,
-    #14131a url("../img/background.jpg") no-repeat center / 100%;
+  background: url("../img/blood.png") no-repeat top right / 70%,
+    #14131a url("../img/background.jpg") no-repeat;
 }
 
 .content {
   display: flex;
+  margin-top: 5%;
 }
 
 .col {
@@ -198,4 +207,148 @@ body {
 
 .creators .content-subtitle {
   margin-bottom: 5px;
+}
+
+.menu-button {
+  display: none;
+}
+
+.menu-close {
+  display: none;
+}
+
+@media (max-width: 1024px) {
+  .content {
+    flex-direction: column;
+    padding-bottom: 5%;
+  }
+
+  .col {
+    margin-bottom: 5%;
+  }
+
+  .primary-bg {
+    background: #14131a;
+  }
+}
+
+@media (max-width: 768px) {
+  .blood-body,
+  .primary-bg {
+    background: #14131a;
+  }
+
+  .venom {
+    margin-top: 15%;
+  }
+}
+
+@media (max-width: 576px) {
+  .venom {
+    top: 3%;
+    width: 40%;
+  }
+  .nav-menu {
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #fff;
+    z-index: 9;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    transform: translateX(100%);
+    transition: transform 0.2s;
+  }
+
+  .nav-menu-item {
+    margin-bottom: 2%;
+    margin-top: 2%;
+    margin-right: 0;
+  }
+
+  .nav-menu-link {
+    color: #14131a;
+  }
+
+  .menu-close {
+    position: fixed;
+    opacity: 0;
+    right: 25px;
+    top: 65px;
+    display: flex;
+    align-items: center;
+    z-index: 10;
+    border: none;
+    background-color: #fff;
+    cursor: pointer;
+    transform: translateX(300%);
+    transition: transform 0.2s;
+    transition-delay: 0.3s;
+  }
+
+  .is-active {
+    opacity: 1;
+    transform: translateX(0);
+  }
+
+  .menu-close-text {
+    margin-right: 10px;
+  }
+
+  .nav {
+    margin-left: auto;
+  }
+
+  .menu-button {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 10px;
+    border: none;
+    background-color: #14131a;
+    cursor: pointer;
+    color: #fff;
+  }
+
+  .menu-button-text {
+    margin-right: 10px;
+  }
+
+  .button-group {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+  }
+
+  .film-text {
+    text-align: center;
+  }
+
+  .film-description {
+    margin: auto;
+  }
+
+  .poster-wrapper {
+    flex-direction: column;
+  }
+
+  .poster {
+    margin-bottom: 4%;
+    margin-right: 0;
+    width: 100%;
+    max-width: 350px;
+  }
+
+  .content .trailer {
+    max-width: 350px;
+    width: 100%;
+  }
+  .actors {
+    column-count: 1;
+  }
 }
